tests/snapshots/cli__gen_bin@bin_ops__concat-multiple-strs.my.snap
---
source: tests/cli.rs
info:
  program: concat-multiple-strs.my.out
  args: []
input_file: tests/input/bin_ops/concat-multiple-strs.my
---
success: true
exit_code: 0
----- stdout -----
hello world from my language

----- stderr -----
