tests/snapshots/cli__gen_bin@bin_ops__concat-strs.my.snap
---
source: tests/cli.rs
info:
  program: concat-strs.my.out
  args: []
input_file: tests/input/bin_ops/concat-strs.my
---
success: true
exit_code: 0
----- stdout -----
hi world

----- stderr -----
