tests/snapshots/cli__gen_bin@bin_ops__div-ints.my.snap
---
source: tests/cli.rs
info:
  program: div-ints.my.out
  args: []
input_file: tests/input/bin_ops/div-ints.my
---
success: true
exit_code: 0
----- stdout -----
4
1
14

----- stderr -----
