tests/snapshots/cli__gen_bin@bin_ops__float-eq.my.snap
---
source: tests/cli.rs
info:
  program: float-eq.my.out
  args: []
input_file: tests/input/bin_ops/float-eq.my
---
success: true
exit_code: 0
----- stdout -----
true
false

----- stderr -----
