tests/snapshots/cli__gen_bin@bin_ops__float-relops.my.snap
---
source: tests/cli.rs
info:
  program: float-relops.my.out
  args: []
input_file: tests/input/bin_ops/float-relops.my
---
success: true
exit_code: 0
----- stdout -----
should be all true
1.2 == 1.2
true
1.2 != 1.3
true
1.2 < 1.3
true
1.2 <= 1.3
true
1.3 <= 1.3
true
1.3 > 1.2
true
1.3 >= 1.2
true
1.3 >= 1.3
true
should be all false
1.3 == 1.2
false
1.2 != 1.2
false
1.3 < 1.2
false
1.3 < 1.3
false
1.3 <= 1.2
false
1.2 > 1.2
false
1.2 > 1.3
false
1.2 >= 1.3
false
1.2 >= 1.3
false

----- stderr -----
