tests/snapshots/cli__gen_bin@bin_ops__int-eq.my.snap
---
source: tests/cli.rs
info:
  program: int-eq.my.out
  args: []
input_file: tests/input/bin_ops/int-eq.my
---
success: true
exit_code: 0
----- stdout -----
true
false

----- stderr -----
