tests/snapshots/cli__gen_bin@bin_ops__mul-ints.my.snap
---
source: tests/cli.rs
info:
  program: mul-ints.my.out
  args: []
input_file: tests/input/bin_ops/mul-ints.my
---
success: true
exit_code: 0
----- stdout -----
2
6

----- stderr -----
